tests/this_inference/this_inference.exp
Error -------------------------------------------------------------------------------------------- class_methods.js:6:41

Cannot get `(new A()).x` because property `x` [1] cannot be unbound from the context [2] where it was defined.
[method-unbinding]

   class_methods.js:6:41
   6| let _1 = {prop : "", method : (new A()).x }.method(); // method-unbinding, this type becomes any, so no more this typing errors
                                              ^ [1]

References:
   class_methods.js:3:5
   3|     x() : number { return this.prop; }
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- class_methods.js:13:41

Cannot get `(new B()).x` because property `x` [1] cannot be unbound from the context [2] where it was defined.
[method-unbinding]

   class_methods.js:13:41
   13| let _2 = {prop : "", method : (new B()).x }.method(); // method-unbinding, this type becomes any, so no more this typing errors
                                               ^ [1]

References:
   class_methods.js:10:5
   10|     x() : number { return 3; }
           ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- class_methods.js:21:15

Cannot get `(new A).x` because property `x` [1] cannot be unbound from the context [2] where it was defined.
[method-unbinding]

   class_methods.js:21:15
   21| c.x = (new A).x; // method-unbinding
                     ^ [1]

References:
   class_methods.js:3:5
    3|     x() : number { return this.prop; }
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- class_methods.js:28:22

Cannot get `this.m` because property `m` [1] cannot be unbound from the context [2] where it was defined.
[method-unbinding]

   class_methods.js:28:22
   28|         let m = this.m; // method-unbinding
                            ^ [1]

References:
   class_methods.js:26:5
   26|     m(): number { return this.x }
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]



Found 4 errors
